[package]
name = "turbo_pfor_sys"
version = "0.1.0"
edition = "2021"

build = "build.rs"

authors = ["mwlon <m.w.loncaric@gmail.com>"]
categories = ["compression", "encoding"]
description = "TurboPFor codec bindings"
include = [
  "TurboPFor-Integer-Compression/lib/**/*.[ch]",
  "TurboPFor-Integer-Compression/include/**/*.h",
  "TurboPFor-Integer-Compression/makefile",
  "src/**/*",
  "Cargo.toml",
  "build.rs",
  "README.md"
]
license = "GPL-2.0-or-later"
repository = "https://github.com/mwlon/turbo-pfor-sys"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.69.4"
